update project_edit html to add delete fields, add delete route to redirect to home page, passes test.

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
 
 
 <% if @projects.any? %>
-<p>Click on a project to see its volunteers:</p>
+<p>Click on a project to view its details:</p>
 
 <ul>
   <% @projects.each do |project| %>
