--- a/views/project_edit.erb
+++ b/views/project_edit.erb
@@ -8,3 +8,10 @@
 
   <button type="submit">Update Project</button>
 </form>
+<br>
+
+<form action="/projects/<%= @project.id() %>" method="post">
+  <input name="_method" type="hidden" value="delete">
+
+  <button type="submit">Delete Project</button>
+</form>
