--- a/views/project.erb
+++ b/views/project.erb
@@ -1,4 +1,25 @@
 <h1>Project: <%= @project.title %></h1>
 
+<h3>Add a volunteer:</h3>
+<form action="/projects/<%= @project.id %>" method="post">
+  <input id="project_id" name="project_id" type="hidden" value="<%= @project.id() %>">
+  <label for="name">Enter volunteer's name:</label>
+  <input id="name" name="name" type="text">
+
+  <button type="submit">Add Volunteer</button>
+</form>
+
+<% if @volunteers.any? %>
+<p>Click on a volunteer to view its details:</p>
+
+<ul>
+  <% @volunteers.each do |volunteer| %>
+  <li><a href="/volunteers/<%= volunteer.id %>"><%= volunteer.name %></a></li>
+  <% end %>
+</ul>
+<% else %>
+<p>There are no volunteers yet!</p>
+<% end %>
+
 <p><a href="/projects/<%= @project.id %>/edit">Edit Project</a></p>
 <p><a href="/">Return to Main Page</a></p>
