--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -1,5 +1,16 @@
 <h1>Volunteer detail for <%= @volunteer.name %></h1>
 
 <h3>Assigned to <%= @project.title %> project</h3>
+<br>
+
+<h3>Update volunteer name:</h3>
+<form action="/volunteers/<%= @volunteer.id %>" method="post">
+  <input name="_method" type="hidden" value="patch">
+
+  <label for="name">Rename your volunteer:</label>
+  <input id="name" name="name" type="text">
+
+  <button type="submit">Update Volunteer</button>
+</form>
 
 <p><a href="/">Return to Main Page</a></p>
